# gitfoam

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml  tag.yml
src/: config.rs  daemon.rs  git.rs  main.rs  secrets.rs
systemd/: gitfoam.service
